--- a/public/index.html
+++ b/public/index.html
@@ -14,15 +14,12 @@
     href="https://fonts.googleapis.com/css2?family=Bigelow+Rules&family=Montserrat+Subrayada:wght@400;700&family=Montserrat:wght@400;700;800&family=Oswald:wght@300&family=Raleway:wght@300;400;600;700&display=swap"
     rel="stylesheet">
 
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-    integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous" />
-
   <title>Clever Fix</title>
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div style="width: 100%;" id="root">
+  <div style="width: 100%" id="root">
 
   </div>
 </body>
